@@ -37,11 +37,7 @@ AT_DATA([prog.cob], [
 
        DATA             DIVISION.
        FILE             SECTION.
-       FD TRANSACTION-DATA
-          LABEL RECORDS ARE OMITTED
-          BLOCK CONTAINS 0 RECORDS
-          RECORD CONTAINS 80 CHARACTERS
-          DATA RECORD IS TRANSACTION-RECORD.
+       FD TRANSACTION-DATA.
        01 TRANSACTION-RECORD.
           03 TR-CUSTOMER-NUMBER     PIC 9(04).
           03 FILLER                 PIC X(01).
@@ -55,7 +51,6 @@ AT_DATA([prog.cob], [
           03 TR-ITEM-COST           PIC 9(03)V99.
           03 FILLER                 PIC X(47).
        FD REPORT-FILE
-          LABEL RECORDS ARE OMITTED
           REPORT IS NO-REPORT.
        WORKING-STORAGE  SECTION.
        01 END-OF-FILE-SWITCH        PIC X(1)    VALUE 'N'.
@@ -115,19 +110,15 @@ AT_DATA([prog.cob], [
            STOP RUN.
 ])
 
-AT_CHECK([$COMPILE_ONLY -std=mf -Wall prog.cob], [1], [],
-[prog.cob: 16: Warning: LABEL RECORDS is obsolete in Micro Focus COBOL
-prog.cob: 18: Warning: RECORD clause ignored for LINE SEQUENTIAL
-prog.cob: 19: Warning: DATA RECORDS is obsolete in Micro Focus COBOL
-prog.cob: 33: Warning: LABEL RECORDS is obsolete in Micro Focus COBOL
-prog.cob: 70: Error: 'CUSTOMER-REPORT' is not defined
-prog.cob: 70: Error: 'CUSTOMER-REPORT' is not a valid report name
-prog.cob: 77: Error: syntax error, unexpected FOREVER
-prog.cob: 78: Error: syntax error, unexpected Identifier
-prog.cob: 79: Error: syntax error, unexpected Identifier
-prog.cob: 82: Error: syntax error, unexpected END-READ
-prog.cob: 85: Error: 'CUSTOMER-REPORT' is not defined
-prog.cob: 85: Error: 'CUSTOMER-REPORT' is not a valid report name
+AT_CHECK([$COMPILE_ONLY prog.cob], [1], [],
+[prog.cob: 65: Error: 'CUSTOMER-REPORT' is not defined
+prog.cob: 65: Error: 'CUSTOMER-REPORT' is not a valid report name
+prog.cob: 72: Error: syntax error, unexpected FOREVER
+prog.cob: 73: Error: syntax error, unexpected Identifier
+prog.cob: 74: Error: syntax error, unexpected Identifier
+prog.cob: 77: Error: syntax error, unexpected END-READ
+prog.cob: 80: Error: 'CUSTOMER-REPORT' is not defined
+prog.cob: 80: Error: 'CUSTOMER-REPORT' is not a valid report name
 ])
 
 AT_CLEANUP
@@ -164,22 +155,65 @@ AT_DATA([prog.cob], [
 
 
        PROCEDURE DIVISION.
-           OPEN OUTPUT out-file
-           INITIATE rp
-           GENERATE rp-detail
-           TERMINATE rp
-           CLOSE out-file
+           OPEN OUTPUT out-file.
+           INITIATE rp.
+           GENERATE rp-detail.
+           TERMINATE rp.
+           CLOSE out-file.
            STOP RUN.
 ])
 
-AT_CHECK([$COMPILE_ONLY -std=mf -Wall prog.cob], [1], [],
+AT_CHECK([$COMPILE_ONLY prog.cob], [1], [],
 [prog.cob: 17: Error: Invalid COLUMN integer; Must be > 0
 prog.cob: 19: Warning: LINE PLUS 0 not implemented
 prog.cob: 22: Warning: LINE PLUS 0 not implemented
 prog.cob: 23: Error: Positive Integer value expected
-prog.cob: 23: Error: Invalid COLUMN integer; Must be > 0
 prog.cob: 24: Error: Positive Integer value expected
+prog.cob: 12: Warning: NO DETAIL line defined in report rp
 prog.cob: 30: Error: 'rp-detail' is not defined
+])
+
+AT_CLEANUP
+
+
+AT_SETUP([Missing DETAIL line])
+AT_KEYWORDS([report])
+
+AT_DATA([prog.cob], [
+       IDENTIFICATION DIVISION.
+       PROGRAM-ID. prog.
+
+       ENVIRONMENT DIVISION.
+       INPUT-OUTPUT SECTION.
+       FILE-CONTROL.
+       SELECT out-file ASSIGN "blah.txt"
+           ORGANIZATION LINE SEQUENTIAL.
+
+       DATA DIVISION.
+       FILE SECTION.
+       FD  out-file REPORT rp.
+
+       REPORT SECTION.
+       RD  rp.
+       01  rp-head TYPE PH.
+          02  LINE 1, COL 2 VALUE "Hello!".
+          02  LINE PLUS 1.
+              03 COLUMN 01      PIC X(09) VALUE 'CUST. NO.'.
+              03 COLUMN PLUS 20 PIC X(09) VALUE 'ITEM'.
+
+
+       PROCEDURE DIVISION.
+           OPEN OUTPUT out-file.
+           INITIATE rp.
+           GENERATE rp-detail.
+           TERMINATE rp.
+           CLOSE out-file.
+           STOP RUN.
+])
+
+AT_CHECK([$COMPILE_ONLY prog.cob], [1], [],
+[prog.cob: 12: Warning: NO DETAIL line defined in report rp
+prog.cob: 26: Error: 'rp-detail' is not defined
 ])
 
 AT_CLEANUP
